v2.2: more methods to post states in StateMachine; two options to tweak whether the IN/OUT processes will be executed for self-circulation state transition. update dependencies;